# nullify

./: BUGS  CREDITS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  configure  configure.ac  nullify.tar.bz2
doc/: Makefile.am  Makefile.in  nullify.6  nullify.xml
res/: icon.xbm  nullify.conf  nullify.dtd  rules.txt
src/: Makefile.am  Makefile.in  digraph.c  digraph.h  dllst.c  dllst.h  gui.c  gui.h  main.c  misc.c  misc.h  replay.c  replay.h  xmlwrappers.h
test/: Makefile.am  Makefile.in  delayedrand.c  digraph_generic.c  dllst_delitem.c  dllst_getitem.c  dllst_isinlst.c  dllst_newitem.c  dllst_sortby.c  errorcodes.h
